# hal-mik32

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.cargo/: config.toml
examples/: blink.rs  gpio.rs  serial.rs  tsense.rs
src/: adc.rs  avcc.rs  battery.rs  brownout.rs  clock.rs  constants.rs  dac.rs  dma.rs  eeprom.rs  epic.rs  gpio.rs  i2c.rs  lib.rs  rcc.rs  rtc.rs  spi.rs  spifi.rs  timer16.rs  timer32_0.rs  timer32_1.rs  timer32_2.rs  tsens.rs  usart.rs  vcc.rs  wdt.rs
