[package]
name = "hal-mik32"
version = "0.1.0"
authors = ["Alex Newlifer"]
description = "Rust hardware abstraction layer for MIK32 microcontrollers."
license = "CC0-1.0"
repository = "https://github.com/Newlifer/hal-mik32"
readme = "README.md"
keywords = ["mik32", "hal", "embedded", "no-std", "riscv"]
categories = ["embedded", "hardware-support", "no-std"]
rust-version = "1.87.0"
edition = "2024"

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0.0"
embedded-dma = "0.2.0"
heapless = "0.9.2"
mik32-pac = "1.1.0"
panic-halt = "1.0.0"
riscv = { version = "0.16.1" }
fugit = "0.3.9"
embedded-timers = "0.3.0"
critical-section = { version = "1.2.0", features = ["restore-state-bool"] }
riscv-rt = "0.18.0"
